  being deferred to.

- ``request.after`` behavior is clarified: it does not run for any
  exceptions raised during the handling of the request, only for the
  "proper" response. Fix a bug where it *did* sometimes run.

- Previously if you returned ``None`` for a path in a ``variables``
  function for a path, you would get a path with ``None`` in it. Now
  it is a ``LinkError``.

- One test related to defer_links did not work correctly in Python 3. Fixed.

- Add API doc for ``body_obj``. Also fix JSON and objects doc to talk
  about ``request.body_obj`` instead of ``request.obj``.

- Extend API docs for security: detail the API an identity policy
  needs to implement and fix a few bugs.

- Fix ReST error in API docs for ``autoconfig`` and ``autosetup``.

- Fix a few ReST links to the API docs in the app reuse document.

0.7 (2014-11-03)
================

- **Breaking change**. There has been a change the way the mount
  directive works. There has also been a change in the way linking
  between application works. The changes result into a simpler, more
  powerful API and implementation.

  The relevant changes are:

  * You can now define your own custom ``__init__`` for
    ``morepath.App`` subclasses. Here you can specify the arguments
    with which your application object should be mounted. The previous
    ``variables`` class attribute is now ignored.

    It's not necessary to use ``super()`` when you subclass from
    ``morepath.App`` directly.

    So, instead of this::

       class MyApp(morepath.App):
           variables = ['mount_id']

    You should now write this::

       class MyApp(morepath.App):
           def __init__(self, mount_id):
               self.mount_id = mount_id

  * The ``mount`` directive should now return an *instance* of the
    application being mounted, not a dictionary with mount
    parameters. The application is specified using the ``app``
    argument to the directive. So instead of this::
